[package]
name = "acm-cli"
version = "0.2.0"
edition = "2021"
authors = ["Khoa Duong <dnakhoa@icloud.com>"]
license = "Apache-2.0"
description = "A dead-simple AI-powered CLI tool for effortlessly crafting meaningful Git commit messages."
readme = "README.md"
homepage = "https://github.com/dnanhkhoa/acm"
repository = "https://github.com/dnanhkhoa/acm"
keywords = ["git", "commit", "ai", "llm", "gpt"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "acm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-openai = "0.18.0"
dirs = "5.0.1"
inquire = "0.6.2"
regex = "1.10.2"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
spinoff = "0.8.0"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
which = "5.0.0"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
