[package]
name = "acm-cli"
version = "0.3.0"
edition = "2021"
authors = ["Khoa Duong <dnakhoa@icloud.com>"]
license = "Apache-2.0"
description = "A dead-simple AI-powered CLI tool for effortlessly crafting meaningful Git commit messages."
readme = "README.md"
homepage = "https://github.com/dnanhkhoa/acm"
repository = "https://github.com/dnanhkhoa/acm"
keywords = ["git", "commit", "ai", "llm", "gpt"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "acm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["cargo"] }
confy = "0.6.0"
dirs = "5.0.1"
inquire = "0.6.2"
serde = { version = "1.0.196", features = ["derive"] }
spinoff = { version = "0.8.0", default-features = false, features = ["dots"] }
ureq = { version = "2.9.5", features = ["json"] }
which = "6.0.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
